Ensure nothing overlaps with header

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@ header {
   top: 0 !important;
   position: fixed;
   width: 100%;
-  z-index: 2;
+  z-index: 100 !important;
   background-color: white;
   display: grid;
   grid-template-columns: 1fr 1fr;
